--- a/index.html
+++ b/index.html
@@ -1,1 +1,178 @@
-Hello World
+<p> <strong> </strong> </p>
+
+<p><strong> DEVENDRA RATHORE </strong></p>
+
+<p>Bangalore, Karnataka 560048 India</p>
+
+<p>9591945839</p>
+
+<p><a href="mailto:rathore.iu@gmail.com">rathore.iu@gmail.com</a></p>
+
+<table border="1" cellspacing="0" cellpadding="0" > 
+<tbody>
+<tr>
+<td valign="top" ><p><strong> PROFESSIONAL </strong></p>
+
+<p><strong> EXPERIENCE </strong></p></td>
+<td valign="top" ><p><strong>Hewlett packard enTerprise, </strong>Bangalore, india </p>
+
+<p><em>Designation : Specialist August 2014 – Present</em></p>
+
+<p><em>Non-Stop QA (NSDi), HPE Mission Critical Solutions, Data Center Infrastructure Group R&amp;D</em></p>
+
+<p>Serving as a key member in Software Quality Assurance/Quality Control and Testware Automation for HPE Non-Stop servers.</p>
+
+<p>· Deployment, configuration and testing of HPE NonStop operating systems on HPE ProLiant servers (blade and rack mount) and VMWare Environment</p>
+
+<p>· Performing various system level tests like COLD LOAD (booting up of OS), upgrade/downgrade, crash dump analysis and administrative tasks in GUARDIAN environment</p>
+
+<p>· Cross-Functionality testing with NonStop features for dependency for different supported Platforms and performing memory error injections (HCME and SCME) and checking error recovery scenarios</p>
+
+<p>· Understanding of overall fault tolerant servers domain such as HPE NonStop servers and has done QA of numerus low level products (such as firmware and System programs of HPE NonStop Server)</p>
+
+<p>· Test Reporting, analysis of crash dumps, server configuration setup and analysis, and verifying product release manuals for publication and certifying for customer use </p>
+
+<p>· Test Plan, Test Design specifications, Test Implementation and Test Execution for Products</p>
+
+<p>· Usage of HPE internal tools for serviceability and manageability, and performing various non-functional tests (soak, stress, longevity, documentation)</p>
+
+<p>· Upgrading/Downgrading servers to latest operating system builds and verifying inconsistencies</p>
+
+<p>· Analyzing, interpreting, evaluating functional specification, debugging, troubleshooting, and automating manual test cases using TACL/Python for HPE NonStop Systems </p>
+
+<p>· Verifying customer bug, troubleshooting and debugging as per customer requirement and conducting knowledge sharing sessions with team members</p>
+
+<p><strong>tata consultancy services, </strong>Bangalore, india </p>
+
+<p><em>Systems Engineer, December 2013 – August 2014</em></p>
+
+<p><strong></strong></p>
+
+<p><strong><em>EMC Corporation, Bangalore </em></strong><em> December 2013 – August 2014</em></p>
+
+<p>As a part of Data Protection Software Group QA (contract employee) at EMC I was involved in testing EMC Data Domain filesystem (DDFS) features like <strong>Marker handling, Retention lock, Deduplication, Compression</strong>. Data Domain deduplication storage system is a secondary/backend storage appliance used to store long term backups.</p>
+
+<p>· Deployment, installation and configuration of EMC Data Domain 660,890, 7200 &amp; Apollo servers.</p>
+
+<p>· Mapping/Mounting the DD storage to Unix/Windows clients via NFS, CIFS protocols and then testing various functionalities for Markers, Compression and Worm features.</p>
+
+<p>· Executing Code-Coverage test cases to determine gaps (untested code) in the test suite.</p>
+
+<p>· Performing non-functional tests (soak, stress, longevity).</p>
+
+<p>· Write shell scripts for testing particular scenarios of stress/load and/or testing functionalities like File Verification or bug reproduction. </p>
+
+<p>· Upgrade/fresh install Data Domain Appliance to latest Sanity/Regression/GA builds.</p>
+
+<p>· Bug Reporting, Reproduction and Bug Verification.</p>
+
+<p>· Enhancement/updating of test cases based on the Change requests/bugs.</p>
+
+<p>· Liaison for coordinating weekly status calls and providing planning status and progress reports of test cycle to the client.</p>
+
+<p><strong>tata consultancy services, </strong>LUCKNOW, india </p>
+
+<p><em>Systems Engineer, March 2010 – March 2013</em></p>
+
+<p><strong></strong></p>
+
+<p><strong><em>NetApp, Inc. </em></strong><em> March 2010 – March 2013</em></p>
+
+<p>As a part of Core Software Group QA (vendor) at NetApp, I was responsible for testing NetApp’s functional features like <strong>Deduplication</strong>, <strong>Compression</strong> and <strong>Clone</strong>.</p>
+
+<p>· Responsible for execution of both Manual and Automated test cases</p>
+
+<p>· Perform Cross-Functionality Testing with other NetApp’s feature like Snap Vault, ASIS, Auto Support, SAN, and High Availability (HA) for different Platforms of NetApp</p>
+
+<p>· Perform various Error injections &amp; then check for Error recovery scenarios (like forced panic, data block corruption, making a volume inconsistent)</p>
+
+<p>· Upgrade &amp; downgrade NetApp’s Filers to various Sanity/Regression/GA builds and perform NDU testing</p>
+
+<p>· Mapping/Mounting the Filer Volumes/Luns to Unix/Windows clients via NFS, CIFS &amp; iSCSI protocols and then testing various functionalities</p>
+
+<p>· Perform stress and longevity testing (for 4-6 weeks)</p>
+
+<p>· Bug Reporting, Reproduction and Bug Verification</p>
+
+<p>· Automation of manual test cases using Perl as scripting language on NATE Framework</p>
+
+<p>· Responsible for providing Weekly status reports and execution plan of test cycle to the client</p>
+
+</td>
+</tr>
+
+<tr>
+<td valign="top" ><p><strong> Education</strong></p></td>
+<td valign="top" ><p><strong>INTEGRAL uNiversity, LUCKNOW, </strong>India</p>
+
+<p><em>Bachelors of Technology in Electronics &amp; Comm. </em>(74.76%) <em>August 2005 – May 2009</em></p>
+
+<p><strong>ST. FIDELIS COLLEGE, LUCKNOW, </strong>India</p>
+
+<p><em>12th Standard (81%) August 2005 – May 2009</em></p>
+
+<p><strong>CAREER CONVENT COLLEGE, LUCKNOW, </strong>India</p>
+
+<p><em>10th Standard (86%) August 2005 – May 2009 </em></p>
+
+</td>
+</tr>
+
+<tr>
+<td valign="top" ><p><strong>Certifications</strong></p></td>
+<td valign="top" ><p>· ISTQB - International Software Testing Qualification Board.</p>
+
+<p>· ITIL V3 - Information Technology Infrastructure Library.</p>
+
+<p>· EMC ISM - EMC Information Storage and Management.</p>
+
+<p>· ANEQP - Applied NetApp QA Engineering Practices.</p>
+
+</td>
+</tr>
+
+<tr>
+<td valign="top" ><p><strong> SKILLS</strong></p>
+
+</td>
+<td valign="top" ><p>· <strong>Operating Systems –</strong> RHEL, Window Server, VMware vCenter server, ESXi </p>
+
+<p>· <strong>Hardware –</strong> HPE ProLiant Servers (DL380, Bl460c Gen 8, Gen 9 &amp; Gen 10), iLO 5, NetApp FAS2040/3240/6020/6200, EMC Data Domain DD660/890/7200 &amp; Apollo</p>
+
+<p>· <strong>Tools –</strong> HPE ALM, HPE QC, Bugzilla, BURT, CRIS, Genesis, Xgarth</p>
+
+<p>· <strong>Scripting –</strong> Python</p></td>
+</tr>
+
+<tr>
+<td valign="top" > </td>
+<td valign="top" > </td>
+</tr>
+
+<tr>
+<td valign="top" ><p><strong> Awards</strong></p></td>
+<td valign="top" ><p>· Best Team Award. - TCS (2012)</p>
+
+<p>· Special Initiative Award: Inspiring role Model to colleagues - TCS (2012)</p></td>
+</tr>
+
+<tr>
+<td valign="top" > </td>
+<td valign="top" > </td>
+</tr>
+
+<tr>
+<td valign="top" ><p><strong> VOLUNTEER </strong></p>
+
+</td>
+<td valign="top" ><p>· <em>Represented TCS stall and endorsing Computer based functional Literacy programme (CBFL) at International Literacy day (</em>2012).</p>
+
+<p>· <em>Represented HPE-NSDi stall at Innovation day (</em>2017).</p>
+
+<p>· <em>Represented HPE-NSDi stall at Demo day (</em>2019).</p>
+
+</td>
+</tr>
+
+</tbody>
+</table>
